Revert to cloudera-framework-1.5.1-cdh5.9.0