@@ -9,7 +9,6 @@
     <version>\${version}</version>
     <packaging>jar</packaging>
 
-
     <distributionManagement>
         <repository>
             <id>cloudera-framework-releases</id>
@@ -155,7 +154,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
-                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
